--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <a href="product/YF-product.html" class="window-animate">
                 <div class="product">
                   <div class="img-wapper">
-                    <img src="images/YF-pop.JPG">
+                    <img src="images/YF-pop.jpg">
                   </div>
                   <div class="ditail">
                     <h2>横浜フォント制作物</h2>
@@ -204,7 +204,7 @@
           <div class="window-body">
             <h1>Profile</h1>
             <div id="who-image-window" class="window-animate">
-              <img src="images/me.JPG">
+              <img src="images/me.jpg">
             </div>
             <div class="me-wrap">
               <div id="name-window" class="window-animate">
