--- a/product/bts-product.html
+++ b/product/bts-product.html
@@ -35,8 +35,7 @@
           <!-- 作品紹介 -->
           <div id="works-ditail-wrapper">
             <!-- 作品ビジュ -->
-            <div class="video-wrapper" style="aspect-ratio: 9/16;
-">
+            <div class="video-wrapper" style="aspect-ratio: 9/16;">
               <iframe src="https://youtube.com/embed/k3VCPSQMr5c?si=NDzSSHaf7E5VXzVn" frameborder="0" allowfullscreen>
               </iframe>
             </div>
