--- a/product/hackathon.html
+++ b/product/hackathon.html
@@ -9,6 +9,11 @@
   <link rel="stylesheet" href="product-css/product-small.css" media="screen and (max-width: 940px)">
   <link rel="stylesheet" href="product-css/common-product.css" media="screen and (min-width: 941px)">
   <link rel="stylesheet" href="../css/common.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Noto+Sans+JP:wght@100..900&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
