--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <h1>Wakana</h1>
               <h1>Portfolio</h1>
             </div>
-            <div class="top-img"><img src="images/top.png"></div>
+            <div class="top-img"><img src="images/top.jpg"></div>
           </div>
         </div>
       </div>
@@ -307,11 +307,25 @@
 
     <!-- 自己紹介セクション -->
     <footer>
-      <div class="for-top"></div>
+      <ul>
+        <a href="#top-wrapper">
+          <li>Top</li>
+        </a>
+        <a href="#works-wrapper">
+          <li>Product</li>
+        </a>
+        <a href="#who-wrapper">
+          <li>Profile</li>
+        </a>
+        <a href="#attempt-wrapper">
+          <li>Activity</li>
+        </a>
+      </ul>
       <div class="footer-text">
         <p>e-meil：cfwf1250135@gn.iwasaki.ac.jp
         </p>
       </div>
+      <small>&copy; 2026 Fujiwara Wakana Portfolio</small>
     </footer>
 
     <script src="javascript/move.js"></script>
