--- a/product/gakuennsai2-product.html
+++ b/product/gakuennsai2-product.html
@@ -115,10 +115,25 @@
       </div>
     </div>
     <footer>
+      <ul>
+        <a href="../index.html#top-wrapper">
+          <li>Top</li>
+        </a>
+        <a href="../index.html#works-wrapper">
+          <li>Product</li>
+        </a>
+        <a href="../index.html#who-wrapper">
+          <li>Profile</li>
+        </a>
+        <a href="../index.html#attempt-wrapper">
+          <li>Activity</li>
+        </a>
+      </ul>
       <div class="footer-text">
         <p>e-meil：cfwf1250135@gn.iwasaki.ac.jp
         </p>
       </div>
+      <small>&copy; 2026 Fujiwara Wakana Portfolio</small>
     </footer>
 
     <script src="../javascript/move.js"></script>
