--- a/product/bread-product.html
+++ b/product/bread-product.html
@@ -40,10 +40,14 @@
           <!-- 作品紹介 -->
           <div id="works-ditail-wrapper">
             <!-- 作品ビジュ -->
-            <div class="video-wrapper" style="aspect-ratio: 9/16;">
-              <iframe src="https://youtube.com/embed/O-uaoRvhtQs?si=z-KE8WZmkLe9zEvq" frameborder="0" allowfullscreen>
-              </iframe>
-            </div>
+            <section id="visual">
+              <div class="video-wrapper" style="aspect-ratio: 9/16;">
+                <iframe src="https://youtube.com/embed/O-uaoRvhtQs?si=z-KE8WZmkLe9zEvq" frameborder="0" allowfullscreen>
+                </iframe>
+              </div>
+              <a class="qr-codo" href="https://fujiwara-0816.github.io/bakery/"><img src="product-img/BtS.png"></a>
+              <small>サイトはこちらから</small>
+            </section>
             <!-- 説明欄 -->
             <section id="explanation-wapper">
               <!-- 概要 -->
