--- a/product/bts-product.html
+++ b/product/bts-product.html
@@ -40,10 +40,14 @@
           <!-- 作品紹介 -->
           <div id="works-ditail-wrapper">
             <!-- 作品ビジュ -->
-            <div class="video-wrapper" style="aspect-ratio: 9/16;">
-              <iframe src="https://youtube.com/embed/k3VCPSQMr5c?si=NDzSSHaf7E5VXzVn" frameborder="0" allowfullscreen>
-              </iframe>
-            </div>
+            <section id="visual" class="window-animate">
+              <div class="video-wrapper" style="aspect-ratio: 9/16;">
+                <iframe src="https://youtube.com/embed/k3VCPSQMr5c?si=NDzSSHaf7E5VXzVn" frameborder="0" allowfullscreen>
+                </iframe>
+              </div>
+              <a class="qr-codo" href="https://fujiwara-0816.github.io/bts/"><img src="product-img/BtS.png"></a>
+              <small>サイトはこちらから</small>
+            </section>
             <!-- 説明欄 -->
             <section id="explanation-wapper">
               <!-- 概要 -->
