--- a/index.html
+++ b/index.html
@@ -217,9 +217,9 @@
               <div id="me-window" class="window-animate">
                 <h3>自己紹介</h3>
                 <p>情報科学専門学校Web技術科1年の<span class="no-wrap">藤原和奏</span>です。<br>
-                  私の目標は、<span class="no-wrap">「わかりやすさ」</span>と<span
-                    class="no-wrap">「使いやすさ」</span>を追求することでユーザーが迷わず、心地よく感じるWebサイトをデザインすることです。<br>
-                  細やかな配慮と確かな技術で、人々のWeb体験をより豊かなものにできるよう、日々学びを深めています。</p>
+                  私が目指すのは、デザインとエンジニアリングの境界をなくし、ユーザーにとって最高に<span class="no-wrap">「心地よい」</span>体験を最短距離で届けることです。<br>
+                  現場の言葉がわかるからこそ、チームの意図を汲み取り、技術的な制約を超えたクリエイティブを実現できる。そんな<span
+                    class="no-wrap">「つくる」</span>に妥協しない制作のプロフェッショナルとして、日々スキルを磨いています。</p>
               </div>
               <div id="qualification-window-wapper" class="window-wrapper">
                 <div id="qualification-window" class="window-animate">
